const mongoose = require('mongoose');

const AVAILABILITY_TIME   = ['MORNING', 'AFTERNOON', 'NIGHT', 'OTHER'];
// MORNING: 8-11 | AFTERNOON: 13-15 | NIGHT: 22-23

const VolunteerProfileSchema = new mongoose.Schema({
    user_id:      { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true, unique: true },
    contact_name: { type: String, default: null },

    address_line: { type: String, required: true },
    pin_code:     { type: String, default: null },
    city:         { type: String, required: true },
    latitude:     { type: Number, default: null },
    longitude:    { type: Number, default: null },

    // Lịch rảnh: ["MON","TUE",...] hoặc "ALL_WEEKDAYS" / "ALL_WEEKEND" / "ANY_DAY"
    availability_days: { type: mongoose.Schema.Types.Mixed, default: [] },
    availability_time: { type: String, enum: AVAILABILITY_TIME, default: null },

    // Mục tiêu số đơn volunteer tự đặt — hiển thị trên Home
    delivery_goal: { type: Number, default: null },

    // Volunteer chủ động bật/tắt nhận đơn — broadcast chỉ gửi khi is_active = true.
    is_active: { type: Boolean, default: false },
}, {
    timestamps: true,
});

module.exports = mongoose.model('VolunteerProfile', VolunteerProfileSchema);
