// ==========================================
// ENUMS
// ==========================================

Enum UserRole {
  UNSET
  DONOR
  RECEIVER
  VOLUNTEER
  ADMIN
}

Enum DonorType {
  RESTAURANT
  BAKERY
  INDIVIDUAL
}

Enum ReceiverType {
  TRUST
  NGO
  INDIVIDUAL
}

Enum FoodType {
  COOKED
  RAW
  FROZEN
  PACKAGED
}

Enum DonationStatus {
  AVAILABLE
  BOOKED
  COMPLETED
  EXPIRED
  CANCELLED
}

Enum RequestStatus {
  PENDING
  ACCEPTED
  FULFILLED
  CANCELLED
}

Enum DeliveryType {
  VIA_AGENT
  SELF_PICKUP
}

Enum DeliveryStatus {
  WAITING_AGENT
  AGENT_ASSIGNED
  ON_THE_WAY
  DELIVERED
  CANCELLED
}

Enum AvailabilityTime {
  MORNING    // 8:00 - 11:00
  AFTERNOON  // 13:00 - 15:00
  NIGHT      // 22:00 - 23:00
  OTHER
}

Enum OtpPurpose {
  SIGNUP
  LOGIN
  RESET_PASSWORD
}

Enum OAuthProvider {
  GOOGLE
  FACEBOOK
}

Enum PostType {
  COMMUNITY
  ANNOUNCEMENT
}

// ==========================================
// TABLES
// ==========================================

Table Users {
  id                integer     [primary key, increment]
  // Nullable với OAuth user — bắt buộc nhập sau khi OAuth login lần đầu (onboarding_step=1)
  phone_number      varchar     [unique]
  email             varchar     [unique]
  // Null nếu đăng nhập bằng OAuth
  password_hash     varchar
  full_name         varchar
  avatar_url        varchar

  role              UserRole    [default: 'UNSET']

  // OAuth
  oauth_provider    OAuthProvider [note: 'GOOGLE hoặc FACEBOOK, null nếu đăng ký thường']
  oauth_id          varchar       [note: 'ID từ Google/Facebook']

  is_phone_verified boolean     [default: false]
  is_email_verified boolean     [default: false]

  // Đăng ký thường : 0-signup → 1-otp → 2-role-selected → 3-profile-completed
  // OAuth lần đầu  : 0-oauth → 1-enter-phone → 2-otp → 3-role-selected → 4-profile-completed
  onboarding_step   integer     [default: 0]
  profile_completed boolean     [default: false]

  points            integer     [default: 0]

  created_at        timestamp
  updated_at        timestamp
}

Table Otp_Sessions {
  id            integer     [primary key, increment]
  phone_number  varchar     [not null]
  purpose       OtpPurpose  [default: 'SIGNUP']
  otp_hash      varchar     [not null]
  attempt_count integer     [default: 0]
  expires_at    timestamp   [not null]
  used_at       timestamp
  created_at    timestamp
}

// 1 User - 1 Donor Profile
Table Donor_Profiles {
  user_id       integer   [primary key, ref: - Users.id]
  donor_type    DonorType [not null]
  business_name varchar
  contact_name  varchar   [note: 'Contact Name (Optional) — hiển thị trong form Restaurant/Bakery']
  address_line  text      [not null]
  city          varchar   [not null]
  pin_code      varchar   [not null]
  latitude      decimal
  longitude     decimal
  created_at    timestamp
  updated_at    timestamp
}

// 1 User - 1 Receiver Profile
Table Receiver_Profiles {
  user_id       integer      [primary key, ref: - Users.id]
  receiver_type ReceiverType [not null]
  contact_name  varchar
  address_line  text         [not null]
  city          varchar      [not null]
  pin_code      varchar      [not null]
  latitude      decimal
  longitude     decimal
  created_at    timestamp
  updated_at    timestamp
}

// 1 User - 1 Volunteer Profile
Table Volunteer_Profiles {
  user_id                    integer             [primary key, ref: - Users.id]
  address_line               text                [not null]
  city                       varchar             [not null]
  pin_code                   varchar             [not null]
  latitude                   decimal
  longitude                  decimal

  availability_days          json                [note: 'Ví dụ: ["MON","WED","FRI"] | "ALL_WEEKDAYS" | "ALL_WEEKEND"']
  availability_time          AvailabilityTime

  delivery_goal              integer             [note: 'Mục tiêu số đơn volunteer muốn giao — hiển thị trên Home']

  created_at                 timestamp
  updated_at                 timestamp
}

// Badges (Super Donor, Top Volunteer, ...)
Table Badges {
  id          integer [primary key, increment]
  name        varchar [not null, note: 'Ví dụ: Super Donor, Top Volunteer']
  icon_url    varchar
  description text
  created_at  timestamp
}

// Badges người dùng đạt được
Table User_Badges {
  id        integer   [primary key, increment]
  user_id   integer   [ref: > Users.id, not null]
  badge_id  integer   [ref: > Badges.id, not null]
  earned_at timestamp

  Note: 'Unique (user_id, badge_id)'
}

// Donor đăng bài tặng đồ ăn
Table Food_Donations {
  id               integer        [primary key, increment]
  donor_id         integer        [ref: > Users.id, not null]

  title            varchar        [not null]
  description      text

  food_type        FoodType       [not null]

  quantity         integer        [not null]
  unit             varchar        [default: 'portion']

  images           json           [note: 'Danh sách URL ảnh']

  expiration_datetime  timestamp  [not null]

  pickup_address_line  text
  pickup_city          varchar
  pickup_pin_code      varchar
  pickup_latitude      decimal
  pickup_longitude     decimal

  status           DonationStatus [default: 'AVAILABLE']

  created_at       timestamp
  updated_at       timestamp
}

// Receiver đăng bài yêu cầu nhận thực phẩm
Table Food_Requests {
  id                 integer        [primary key, increment]
  receiver_id        integer        [ref: > Users.id, not null]

  title              varchar        [not null]
  description        text

  requested_quantity integer        [not null]
  unit               varchar        [default: 'portion']

  needed_before      timestamp
  status             RequestStatus  [default: 'PENDING']

  created_at         timestamp
  updated_at         timestamp
}

// Liên kết giữa donor - receiver - volunteer
Table Deliveries {
  id            integer        [primary key, increment]

  donation_id   integer        [ref: > Food_Donations.id]
  request_id    integer        [ref: > Food_Requests.id]

  donor_id      integer        [ref: > Users.id, not null]
  receiver_id   integer        [ref: > Users.id, not null]
  volunteer_id  integer        [ref: > Users.id]

  delivery_type DeliveryType   [not null]
  status        DeliveryStatus [default: 'WAITING_AGENT']

  pickup_code   varchar

  assigned_at   timestamp
  picked_up_at  timestamp
  delivered_at  timestamp
  cancelled_at  timestamp

  created_at    timestamp
  updated_at    timestamp

  Note: 'Chỉ nên có 1 trong 2 trường donation_id hoặc request_id có giá trị'
}

// Đánh giá sau giao hàng
Table Feedbacks {
  id           integer [primary key, increment]
  delivery_id  integer [ref: > Deliveries.id, not null]
  from_user_id integer [ref: > Users.id, not null]
  to_user_id   integer [ref: > Users.id, not null]

  rating       integer [not null, note: '1-5']
  comment      text

  created_at   timestamp
}

// Bài đăng cộng đồng (Community section trên Home)
Table Community_Posts {
  id          integer  [primary key, increment]
  author_id   integer  [ref: > Users.id, not null]

  type        PostType [default: 'COMMUNITY']
  title       varchar  [not null]
  content     text
  image_url   varchar

  created_at  timestamp
  updated_at  timestamp
}

// Thông báo hệ thống
Table Notifications {
  id                  integer [primary key, increment]
  user_id             integer [ref: > Users.id, not null]

  title               varchar [not null]
  message             text    [not null]
  type                varchar
  related_entity_type varchar
  related_entity_id   integer

  is_read             boolean [default: false]
  created_at          timestamp
}
